@@ -19,7 +19,6 @@
 package io.ballerina.runtime.internal.launch;
 
 import io.ballerina.runtime.api.Module;
-import io.ballerina.runtime.api.launch.LaunchListener;
 import io.ballerina.runtime.internal.configurable.ConfigMap;
 import io.ballerina.runtime.internal.configurable.ConfigProvider;
 import io.ballerina.runtime.internal.configurable.ConfigResolver;
@@ -38,12 +37,10 @@ import java.io.File;
 import java.io.PrintStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
-import java.util.ServiceLoader;
 import java.util.Set;
 
 import static io.ballerina.runtime.api.constants.RuntimeConstants.DOT;
@@ -59,21 +56,17 @@ import static io.ballerina.runtime.internal.configurable.providers.toml.TomlCons
  * 
  * @since 1.0
  */
-public class LaunchUtils {
+public final class LaunchUtils {
 
     private static final PrintStream outStream = System.out;
 
     private LaunchUtils() {
     }
 
-    public static void startListenersAndSignalHandler(boolean isService) {
-        // starts all listeners
-        startListeners(isService);
-
-        // start TRAP signal handler which produces the strand dump
-        startTrapSignalHandler();
-    }
-
+    @SuppressWarnings("unused")
+    /*
+     * Used for codegen. This will handle trap signals for strand dump.
+     */
     public static void startTrapSignalHandler() {
         try {
             Signal.handle(new Signal("TRAP"), signal -> outStream.println(StrandDump.getStrandDump()));
@@ -83,16 +76,10 @@ public class LaunchUtils {
         }
     }
 
-    public static void startListeners(boolean isService) {
-        ServiceLoader<LaunchListener> listeners = ServiceLoader.load(LaunchListener.class);
-        listeners.forEach(listener -> listener.beforeRunProgram(isService));
-    }
-
-    public static void stopListeners(boolean isService) {
-        ServiceLoader<LaunchListener> listeners = ServiceLoader.load(LaunchListener.class);
-        listeners.forEach(listener -> listener.afterRunProgram(isService));
-    }
-
+    @SuppressWarnings("unused")
+    /*
+     * Used for codegen adding module configurable data.
+     */
     public static void addModuleConfigData(Map<Module, VariableKey[]> configurationData, Module m,
                                            VariableKey[] variableKeys) {
         VariableKey[] currKeys = configurationData.get(m);
@@ -107,6 +94,10 @@ public class LaunchUtils {
         configurationData.put(m, mergedKeyArray);
     }
 
+    @SuppressWarnings("unused")
+    /*
+     * Used for codegen initialize configurable variables.
+     */
     public static void initConfigurableVariables(Module rootModule, Map<Module, VariableKey[]> configurationData,
                                                  String[] args, Path[] configFilePaths, String configContent) {
 
@@ -147,7 +138,7 @@ public class LaunchUtils {
         if (envVars.containsKey(CONFIG_FILES_ENV_VARIABLE)) {
             String[] configPathList = envVars.get(CONFIG_FILES_ENV_VARIABLE).split(File.pathSeparator);
             for (String pathString : configPathList) {
-                paths.add(Paths.get(pathString));
+                paths.add(Path.of(pathString));
             }
         } else if (envVars.containsKey(CONFIG_DATA_ENV_VARIABLE)) {
             return envVars.get(CONFIG_DATA_ENV_VARIABLE);
@@ -159,9 +150,13 @@ public class LaunchUtils {
         return null;
     }
 
+    @SuppressWarnings("unused")
+    /*
+     * Used for codegen to get configurable input paths.
+     */
     public static ConfigDetails getTestConfigPaths(Module module, String pkgName, String sourceRoot) {
         String moduleName = module.getName();
-        Path testConfigPath = Paths.get(sourceRoot);
+        Path testConfigPath = Path.of(sourceRoot);
         if (!Files.exists(testConfigPath)) {
             testConfigPath = getSourceRootInContainer();
         }
@@ -179,6 +174,6 @@ public class LaunchUtils {
 
     private static Path getSourceRootInContainer() {
         // Since we are inside a docker container, it's current working directory is the source root.
-        return Paths.get(RuntimeUtils.USER_DIR);
+        return Path.of(RuntimeUtils.USER_DIR);
     }
 }
