@@ -35,14 +35,16 @@ import org.eclipse.lsp4j.TextEdit;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
  * This class is being used to build resource access completion item.
  *
  * @since 2201.2.0
  */
-public class ResourcePathCompletionItemBuilder {
+public final class ResourcePathCompletionItemBuilder {
+
+    private ResourcePathCompletionItemBuilder() {
+    }
 
     /**
      * Creates and returns completion items given a resource method symbol.
@@ -81,7 +83,7 @@ public class ResourcePathCompletionItemBuilder {
             item.setFilterText(ResourcePathCompletionUtil
                     .getFilterTextForClientResourceAccessAction(resourceMethodSymbol, segments));
             return item;
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
     private static CompletionItem buildCompletionItem(ResourceMethodSymbol resourceMethodSymbol, 
