@@ -38,8 +38,9 @@ import io.ballerina.runtime.api.values.BString;
 import io.ballerina.runtime.api.values.BValue;
 import io.ballerina.runtime.api.values.BXml;
 import io.ballerina.runtime.api.values.BXmlSequence;
-import io.ballerina.runtime.internal.configurable.providers.ConfigDetails;
-import io.ballerina.runtime.internal.launch.LaunchUtils;
+import io.ballerina.runtime.internal.BalRuntime;
+import io.ballerina.runtime.internal.ClassloaderRuntime;
+import io.ballerina.runtime.internal.scheduling.Scheduler;
 import io.ballerina.runtime.internal.scheduling.Strand;
 import io.ballerina.runtime.internal.types.BAnnotatableType;
 import io.ballerina.runtime.internal.values.ErrorValue;
@@ -55,12 +56,10 @@ import java.lang.reflect.Method;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.security.AccessController;
 import java.security.PrivilegedAction;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -81,7 +80,7 @@ import static io.ballerina.runtime.api.creators.TypeCreator.createErrorType;
  * @since 2.0.0
  */
 @SuppressWarnings("unused")
-public class DebuggerRuntime {
+public final class DebuggerRuntime {
 
     private static final String EVALUATOR_STRAND_NAME = "evaluator-strand";
     private static final String XML_STEP_SEPARATOR = "/";
@@ -105,7 +104,7 @@ public class DebuggerRuntime {
     public static Object invokeObjectMethod(BObject bObject, String methodName, Object... args) {
         try {
             final Object[] paramValues = args[0] instanceof Strand ? Arrays.copyOfRange(args, 1, args.length) : args;
-            final Strand strand = args[0] instanceof Strand s ?  s  : new Strand();
+            final Strand strand = args[0] instanceof Strand s ? s : Scheduler.getStrand();
             return ((ObjectValue) bObject).call(strand, methodName, paramValues);
         } catch (Exception e) {
             throw ErrorCreator.createError(StringUtils.fromString("invocation failed: " + e.getMessage()));
@@ -129,12 +128,12 @@ public class DebuggerRuntime {
             try {
                 return method.invoke(null, paramValues);
             } catch (IllegalAccessException | InvocationTargetException e) {
-                throw ErrorCreator.createError(StringUtils.fromString(
-                        "'" + methodName + "' function invocation failed: " + e.getMessage()));
+                throw ErrorCreator.createError(StringUtils.fromString("'" + methodName +
+                                               "' function invocation failed: " + e.getMessage()));
             }
         } catch (Exception e) {
-            throw ErrorCreator.createError(StringUtils.fromString(
-                    "'" + methodName + "' function invocation failed: " + e.getMessage()));
+            throw ErrorCreator.createError(StringUtils.fromString("'" + methodName +
+                                           "' function invocation failed: " + e.getMessage()));
         }
     }
 
@@ -148,8 +147,8 @@ public class DebuggerRuntime {
      * @param fieldValues    field values
      * @return Ballerina object instance
      */
-    public static Object createObjectValue(String pkgOrg, String pkgName, String pkgVersion, String objectTypeName,
-                                           Object... fieldValues) {
+    public static Object createObjectValue(String pkgOrg, String pkgName, String pkgVersion,
+                                           String objectTypeName, Object... fieldValues) {
         Module packageId = new Module(pkgOrg, pkgName, pkgVersion);
         return ValueCreator.createObjectValue(packageId, objectTypeName, fieldValues);
     }
@@ -194,8 +193,9 @@ public class DebuggerRuntime {
         }
 
         ErrorType bErrorType = createErrorType(TypeConstants.ERROR, PredefinedTypes.TYPE_ERROR.getPackage());
-        BMap<BString, Object> errorDetailsMap = ValueCreator.createMapValue((MapType) PredefinedTypes.TYPE_ERROR_DETAIL,
-                errorDetailEntries.toArray(errorDetailEntries.toArray(new BMapInitialValueEntry[0])));
+        BMap<BString, Object> errorDetailsMap = ValueCreator.createMapValue((MapType)
+                PredefinedTypes.TYPE_ERROR_DETAIL, errorDetailEntries.toArray(
+                        errorDetailEntries.toArray(new BMapInitialValueEntry[0])));
         return ErrorCreator.createError(bErrorType, (StringValue) message, (ErrorValue) cause, errorDetailsMap);
     }
 
@@ -208,12 +208,12 @@ public class DebuggerRuntime {
      */
     public static Object getAnnotationValue(Object typedescValue, String annotationName) {
         if (!(typedescValue instanceof TypedescValue)) {
-            return ErrorCreator.createError(StringUtils.fromString("Incompatible types: expected 'typedesc`, " +
-                    "found '" + typedescValue.toString() + "'."));
+            return ErrorCreator.createError(StringUtils.fromString("Incompatible types: expected 'typedesc`, "
+                                                                   + "found '" + typedescValue.toString() + "'."));
         }
         Type type = ((TypedescValue) typedescValue).getDescribingType();
-        if (type instanceof BAnnotatableType) {
-            return ((BAnnotatableType) type).getAnnotations().entrySet()
+        if (type instanceof BAnnotatableType bAnnotatableType) {
+            return bAnnotatableType.getAnnotations().entrySet()
                     .stream()
                     .filter(annotationEntry -> annotationEntry.getKey().getValue().endsWith(annotationName))
                     .findFirst()
@@ -222,14 +222,12 @@ public class DebuggerRuntime {
         }
 
         return ErrorCreator.createError(StringUtils.fromString("type: '" + TypeUtils.getType(type.getEmptyValue())
-                + "' does not support annotation access."));
+                                                               + "' does not support annotation access."));
     }
 
     private static Method getMethod(String functionName, Class<?> funcClass) throws NoSuchMethodException {
-        Method declaredMethod = Arrays.stream(funcClass.getDeclaredMethods())
-                .filter(method -> functionName.equals(method.getName()))
-                .findAny()
-                .orElse(null);
+        Method declaredMethod = Arrays.stream(funcClass.getDeclaredMethods()).filter(method ->
+                functionName.equals(method.getName())).findAny().orElse(null);
 
         if (declaredMethod != null) {
             return declaredMethod;
@@ -245,8 +243,8 @@ public class DebuggerRuntime {
             return "int";
         } else if (value instanceof Float || value instanceof Double) {
             return "float";
-        } else if (value instanceof BValue) {
-            return ((BValue) value).getType().getName();
+        } else if (value instanceof BValue bValue) {
+            return bValue.getType().getName();
         } else {
             return "unknown";
         }
@@ -323,9 +321,8 @@ public class DebuggerRuntime {
             xmlNamePattern = stepParts[stepParts.length - 1];
         }
 
-        return Arrays.stream(xmlNamePattern.split(XML_NAME_PATTERN_SEPARATOR))
-                .map(entry -> StringUtils.fromString(entry.trim()))
-                .toArray(BString[]::new);
+        return Arrays.stream(xmlNamePattern.split(XML_NAME_PATTERN_SEPARATOR)).map(entry ->
+                StringUtils.fromString(entry.trim())).toArray(BString[]::new);
     }
 
     /**
@@ -340,12 +337,7 @@ public class DebuggerRuntime {
     public static Object classloadAndInvokeFunction(String executablePath, String mainClass, String functionName,
                                                     Object... userArgs) {
         try {
-            // Need to pass the strand (or null) as the first argument for the generated function.
-            List<Object> functionArgs = new ArrayList<>();
-            functionArgs.add(null);
-            functionArgs.addAll(Arrays.asList(userArgs));
-
-            URL pathUrl = Paths.get(executablePath).toUri().toURL();
+            URL pathUrl = Path.of(executablePath).toUri().toURL();
             URLClassLoader classLoader = AccessController.doPrivileged((PrivilegedAction<URLClassLoader>) () ->
                     new URLClassLoader(new URL[]{pathUrl}, ClassLoader.getSystemClassLoader()));
 
@@ -354,45 +346,35 @@ public class DebuggerRuntime {
             String packageOrg = mainClassNameParts[0];
             String packageName = mainClassNameParts[1];
             String packageVersion = mainClassNameParts[2];
-            String packageNameSpace = String.join(".", packageOrg, packageName, packageVersion);
-
-
-            // Initialize configurations
-            ConfigDetails configurationDetails = LaunchUtils.getConfigurationDetails();
-            invokeMethodDirectly(classLoader, String.join(".", packageNameSpace, CONFIGURE_INIT_CLASS_NAME),
-                    CONFIGURE_INIT_METHOD_NAME, new Class[]{Map.class, String[].class, Path[].class, String.class},
-                    new Object[]{new HashMap<>(), new String[]{}, configurationDetails.paths,
-                            configurationDetails.configContent});
-            // Initialize the module
-            invokeFunction(classLoader, String.join(".", packageNameSpace, MODULE_INIT_CLASS_NAME),
-                    MODULE_INIT_METHOD_NAME, new Object[1]);
-            // Start the module
-            invokeFunction(classLoader, String.join(".", packageNameSpace, MODULE_INIT_CLASS_NAME),
-                    MODULE_START_METHOD_NAME, new Object[1]);
-            // Run the actual method
-            return invokeFunction(classLoader, mainClass, functionName, functionArgs.toArray());
+            Module module = new Module(packageOrg, packageName, packageVersion, false);
+            return invokeBalRuntimeMethod(functionName, module, classLoader, userArgs);
         } catch (Exception e) {
             return e.getMessage();
         }
     }
 
-    /**
-     * Invokes a method that is in the given class.
-     * This is directly invoked without scheduling.
-     * The method must be a static method accepting the given parameters.
-     *
-     * @param classLoader Class loader to find the class.
-     * @param className   Class name with the method.
-     * @param methodName  Method name to invoke.
-     * @param argTypes    Types of arguments.
-     * @param args        Arguments to provide.
-     * @return The result of the invocation.
-     */
-    protected static Object invokeMethodDirectly(ClassLoader classLoader, String className, String methodName,
-                                                 Class<?>[] argTypes, Object[] args) throws Exception {
-        Class<?> clazz = classLoader.loadClass(className);
-        Method method = clazz.getDeclaredMethod(methodName, argTypes);
-        return method.invoke(null, args);
+    private static Object invokeBalRuntimeMethod(String functionName, Module module, ClassLoader classLoader,
+                                                 Object[] paramValues) {
+        BalRuntime runtime = new ClassloaderRuntime(module, classLoader);
+        Object result;
+        try {
+            // Initialize the module
+            runtime.init();
+            // Start the module
+            runtime.start();
+            // Then call run method
+            result = runtime.callFunction(module, functionName,  null, paramValues);
+        } catch (Throwable throwable) {
+            throw ErrorCreator.createError(StringUtils.fromString("'" + functionName + "' function " +
+                                                                  "invocation failed : " + throwable.getMessage()));
+        } finally {
+            try {
+                runtime.stop();
+            } catch (BError ignored) {
+                // stop errors are ignored
+            }
+        }
+        return result;
     }
 
     private DebuggerRuntime() {
